Kubernetes_Learn_Manifest/Common/rc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginxsvc
spec:
  type: NodePort
  selector:
    app: nginxapp
  ports:
    - port: 80
