Kubernetes_Learn_Manifest/Common/all.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: smaple-quota
  namespace: demo-prasad
spec:
  hard:
    cpu: "1000"
    memory: "1Gi"
    pod: "2"

kubectl create namespace demo-prasad

apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: nginx
spec: 
  container:
  - name: sample-container
    image: nginx
    ports:
    - containerPort: 80

kubectl run nginx --image=ngimx --port=80 --labels app=nginx --namespace=demons


apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
  namespace: demo
  labels:
    app: nginxapp
spec:
  containers:
  - name: nginxcon
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
  namespace: demo
spec:
  type: NodePort
  selector:
    app: nginxapp
  ports:
  - port: 8080
    targetPort: 80


Hprizaontal pod autoscaling

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      run: php-apache
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: registry.k8s.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    run: php-apache
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: php-apache
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: php-apache
  minReplicas: 1
  maxReplicas: 10
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 40
  - type: Resource
    resource:
      name: memory
      target:
        type: Utilization
        averageUtilization: 40

kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
--kubelet-insecure-tls
kubectl edit deployment metrics-server -o yaml -n kube-system
kubectl run -it --rm loadtest --image busybox /bin/sh
kubectl apply -f hpa.yaml --record
kubectl rollout history deployment/<deployment-name>
kubectl rollout history deployment php-apache
kubectl rollout undo deployment php-apache --to-revision=1
kubectl rollout history deployment php-apache
kubectl rollout undo deployment php-apache --to-revision=3
kubectl rollout undo deployment php-apache --to-revision=2
kubectl rollout history deployment php-apache
kubectl rollout history deployment php-apache


Spring app deployment on k8s



apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
  labels:
    app: springapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springcon
        image: dockerhandson/spring-boot-mongo:1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: springsvc
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongocon
        image: mongo
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017

kubectl apply -f spring.yaml --dry-run=client

ingress conroller and rules

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      run: php-apache
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: registry.k8s.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    run: php-apache
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: php-apache
            port:
              number: 80
          
kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/cloud/deploy.yaml
